--- a/src/main/webapp/resources/css/first_work_page.css
+++ b/src/main/webapp/resources/css/first_work_page.css
@@ -1,215 +1,106 @@
 
-/* GENERAL STYLES */
+/* small  first work page STYLES */
 body {
 	font-family: Arial, San-Serif;
 	font-size: 100%;
 }
-ul {
-	margin: 0;
-	padding: 0;
-}
-ul li {
-	list-style-type: none;
-}
-a {
-	text-decoration: none;
-}
-p {
-	font-size: 13px;
-	line-height: 1.3em;
-}
 
-.container-first {
-	margin: 0 auto;
-	width: 960px;
-}
-
-.container {
-	margin: 0 auto;
-	width: 960px;
-}
 
 /* HEADER */
-.header {
-	padding: 1px 0px;
-	background-color: yellowgreen;
-}
-.header h1,
-.header h2 {
-	color: greenyellow;
-	text-align: center;
-	
-}
 
-h3{
-    color: #000000;
-    text-align: center;
-    padding: 10px 0px;
-}
+/*NAVIGATION */
 
-/* NAVIGATION */
-.page-navigation {
-	background-color: #222;
-	border-color: #101010;
-	min-height: 64px;
-}
-.page-navigation li {
-	float: left;
-	width: 100px;
-}
-.page-navigation a {
-	display: block;
 
-	color: #9d9d9d;
-	line-height: 4em;
-	font-weight: bold;
-	text-align: center;
-}
-.page-navigation li a:hover {
-	color: yellowgreen;
+#navbar ul{
+	display: none;
 	background-color: black;
+	position: absolute;
+	top: 100%;
+}
+#navbar li:hover ul { display: block; }
+#navbar, #navbar ul{
+	margin: 0;
+	padding: 0px;
+	list-style-type: none;
+}
+#navbar {
+	min-height: 54px;
+	background-color: black;
+	padding-left: 25px;
+	min-width: 960px;
+}
+#navbar li {
+	float: left;
+	position: relative;
+	height: 100%;
+}
+#navbar li a {
+	display: block;
+	padding: 6px;
+	width: 100px;
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
 }
 
-/* LOGIN FORM */
-.login {
-	padding: 15px 0;
-	float: right;
-    margin-left: 90px ;
+#navbar ul li { float: none; }
+#navbar li:hover { background-color: #222; }
+#navbar ul li:hover { background-color: #222;; }
+
+
+#out  {
+	padding-left: 370px;
 }
-.login input[type="text"],
-.login input[type="password"] {
-	padding: 5px;
-	margin-left: 20px;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	outline: none;
-}
-.login input[type="submit"] {
-	padding: 5px 15px;
-	border: 1px solid lightgrey;
-	border-radius: 5px;
-}
-.login input[type="submit"]:hover,
-button:hover {
-	background-color: darkgrey;
-	color: white;
-}
+
+
 
 /* MAIN PART */
 
+/*Sort form*/
 
-.collections,.collections-first {
-	overflow: auto;
-}
-.collection-title {
-	padding-bottom: 5px;
-	border-bottom: 1px solid #777;
-	font-size: 36px;
-}
-.collection-title small {
-	color: #777;
-	font-size: 70%;
-}
-.collection-item-outer   {
-	display: inline-block;
-	float: left;
-	padding-left: 5px;
-	padding-right: 5px;
-	width: 33.33%;
-	box-sizing: border-box;
+.work_form{
+	margin: 5px 5px 5px 5px;
 }
 
- .collection-item-outer-first  {
-	display: inline-block;
-	float: left;
-     padding-top: 25px;
-
-     padding-left: 5px;
-	padding-right: 5px;
-	width: 33.33%;
-	box-sizing: border-box;
+.button_navigation_form{
+	/*margin-top: 20px;*/
+	/*margin-bottom: 2px;*/
+	margin: 20px 20px 20px 20px;
 }
 
-
-.collections > div:first-child {
-	padding-left: 0;
-	padding-right: 10px;
-}
-.collections > div:last-child {
-	padding-right: 0;
-	padding-left: 10px;
-}
-
-
-.collections-first > div:first-child {
-	padding-left: 0;
-	padding-right: 20px;
-}
-.collections-first > div:last-child {
-	padding-right: 0;
-	padding-left: 150px;
-}
-.collection-item {
-	border: 1px solid #959595;
+.sort_form{
+"font-weight: bold;
+width: 130px;
+	padding: 5px 10px;
+	margin-top: 30px;
+	margin-left: 800px;
+	background: #cccccc;
 }
 
-.collection-item-first {
-	border: 0px solid #959595;
+.button-navigator{
+	width: 400px;
+	height: 250px;
+	border: 2px;
+	background-color: yellowgreen ;
+
+	padding: 5px 15px;
+	border: 4px solid lightgrey;
+	border-radius: 25px;
+
 }
-.collection-item img,
-.collection-item video , .collection-item-first {
-	width: 100%;
-}
-.collection-text {
-	padding: 0 20px 20px 20px;
-}
-.collection-text h3 {
-	color: yellowgreen;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-}
-.collection-text p {
-	height: 80px;
-	overflow: hidden;
-}
-.collection-text button {
-	padding: 10px;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	outline: none;
-}
+
 
 /* FOOTER */
 .footer {
 	background-color: yellowgreen;
 	color: white;
 	padding: 20px 0;
-	margin-top: 30px;
+	margin-top: 5px;
 }
 
 
-.button-navigator{
-width: 400px;
-height: 250px;
-border: 2px;
-background-color: yellowgreen ;
 
-padding: 5px 15px;
-	border: 4px solid lightgrey;
-	border-radius: 25px;
-	
-}
 
-/* Navigate on castumer button */
-#shop {
-	margin-top: 20px;
-}
 
-#work {
-	margin-top: 20px
-}
 
-.video-motiv{
 
-}
