--- a/src/main/webapp/resources/css/page_for_group_menu.css
+++ b/src/main/webapp/resources/css/page_for_group_menu.css
@@ -16,11 +16,11 @@
 /*body {*/
 .navigate{
     font: 9px "open sans", Arial, sans-serif;
-    background: rgb(97, 56, 56);
+    background: rgb(2, 8, 2);
 }
 
 ul.navbar {
-    background: rgb(97, 56, 56); /* Old browsers */
+    background: rgba(1, 2, 1, 0.98); /* Old browsers */
     width: 1000px;
     margin: 2em auto;
 }
@@ -34,7 +34,7 @@ ul.navbar li {
 ul.navbar li a {
     display: block;
     padding: 13px 15px;
-    color: #777 !important;
+    color: white !important;
     text-decoration: none;
     text-transform: uppercase;
     transition: all .2s ease-in-out;
@@ -64,3 +64,59 @@ ul.navbar li:hover > ul { opacity: 1; visibility: visible; left: 0; max-height: 
 ul.navbar > li:hover > ul { opacity: 1; visibility: visible; top: 100%; left: 0; }
 ul.navbar li > ul  ul { top: 0; left: 90%; }
 ul.navbar li > ul li:hover > ul { left: 100%; }
+
+#out  {
+    padding-left: 390px;
+}
+
+/* MAIN PART */
+
+/*Sort form*/
+
+.work_form{
+    margin: 5px 5px 5px 5px;
+}
+
+.button_navigation_form{
+    /*margin-top: 20px;*/
+    /*margin-bottom: 2px;*/
+    margin: 20px 20px 20px 20px;
+}
+
+.sort_form{
+"font-weight: bold;
+width: 130px;
+    padding: 5px 10px;
+    margin-top: 30px;
+    margin-left: 800px;
+    background: #cccccc;
+}
+
+.button-navigator{
+    width: 400px;
+    height: 250px;
+    border: 2px;
+    background-color: yellowgreen ;
+
+    padding: 5px 15px;
+    border: 4px solid lightgrey;
+    border-radius: 25px;
+
+}
+
+
+/* FOOTER */
+.footer {
+    background-color: yellowgreen;
+    color: white;
+    padding: 20px 0;
+    margin-top: 5px;
+}
+
+
+
+
+
+
+
+
