--- a/src/main/webapp/resources/css/page_for_group_menu.css
+++ b/src/main/webapp/resources/css/page_for_group_menu.css
@@ -15,12 +15,12 @@
 /*body {*/
 .navigate{
     font: 9px "open sans", Arial, sans-serif;
-    background: rgb(2, 8, 2);
+    /*background: rgb(2, 8, 2);*/
 }
 
 ul.navbar {
     background: rgba(1, 2, 1, 0.98); /* Old browsers */
-    width: 1000px;
+    /*width: 1000px;*/
     margin: 2em auto;
 }
 
