--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -203,3 +203,111 @@ padding: 5px 15px;
 .video-motiv{
 
 }
+
+.modalDeal .modalBut{
+	display: none;
+}
+
+.modalDeal .cancel{
+	display: inline-block;
+}
+
+/* ==========================================================================
+Modal window
+========================================================================== */
+
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.8);
+	z-index: 99999;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	display: none;
+	pointer-events: none;
+}
+
+.modalDialog:target {
+	display: block;
+	pointer-events: auto;
+}
+
+.modalDialog header {
+	height: 70px;
+	margin-bottom: 10px;
+	background: #eee;
+}
+
+.wrapper__modal1Title {
+	margin: auto;
+	width: 200px;
+	padding-top: 18px;
+}
+
+.wrapper__modal1Title h3 {
+	line-height: 39px;
+	float: right;
+	font-weight: bold;
+}
+
+.modalDialog .wrapper__modal1Title div {
+	background: black;
+	width: 25px;
+	height: 25px;
+	float: left;
+}
+
+.modalDialog .fa {
+	color: white;
+	font-size: 21px;
+	margin: 1px 0 0 5px;
+}
+
+.modalDialog > div {
+	width: 480px;
+	position: relative;
+	margin: 10% auto;
+	background: #fff;
+}
+
+.modalDialog select {
+	margin-left: 10px;
+}
+
+.modalDialog .fa-plus-square {
+	color: black;
+	margin: 0;
+	font-size: 17px;
+}
+
+.modalInput {
+	width: 255px;
+	float: right;
+}
+
+#modalContactName, #modalContactSurname {
+	width: 150px;
+}
+
+.modalDialog p {
+	font-size: 15px;
+	width: 450px;
+	padding: 5px 20px 5px 7px;
+}
+
+.modalBut {
+	width: 150px;
+	height: 27px;
+	margin: 10px 10px 10px 56px;
+	color: white;
+	background: #5ab95d;
+}
+
+.cancel {
+	background: #d9544f;
+}
