--- a/src/main/webapp/resources/css/tableStyle.css
+++ b/src/main/webapp/resources/css/tableStyle.css
@@ -117,3 +117,7 @@ tr:nth-child(odd) {background:#FFFFFF}
 
 tr:hover {background-color:#b69532;}
 td:hover {background-color:#ffa8ff;}
+
+.chooseBlock{
+	background-color: #0775D3;
+}
