--- a/src/main/webapp/resources/css/tableStyle.css
+++ b/src/main/webapp/resources/css/tableStyle.css
@@ -118,6 +118,7 @@ tr:nth-child(odd) {background:#FFFFFF}
 tr:hover {background-color:#b69532;}
 td:hover {background-color:#ffa8ff;}
 
+/*// add style to the select type*/
 .chooseBlock{
 	background-color: #0775D3;
 }
